--- a/hot_front/html/notifications.html
+++ b/hot_front/html/notifications.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Расписание занятий - Онлайн-запись на спортивные секции</title>
+    <title>Уведомления - Онлайн-запись на спортивные секции</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/corecss.css">
-    <link rel="stylesheet" type="text/css" href="../css/schedule_css.css">
+    <link rel="stylesheet" type="text/css" href="../css/notifications_css.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,23 +15,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
     <link rel="stylesheet" href="css/bootstrap-multiselect.css" type="text/css">
     <script type="text/javascript" src="../js/js/bootstrap-multiselect.js"></script>
 
-    <script>
-        // print window launcher
-       function printIt() {
-           window.print();
-       }
 
-       // to launch submit viewer
-       function viewSubmit() {
-            var openWindow = window.open('../images/blank.jpg', '_blank', 'width=500, height=400');
-
-       }
-
-    </script>
 </head>
 <body>
 <!-- start : navigation bar (page header) area -->
@@ -119,18 +111,19 @@
                             Заявки</a>
                         <ul class="dropdown-menu p-0">
                             <li class="dropdown-item menu-item">
-                                <a tabindex="-1" href="submission.html" style="color: black">
+                                <a tabindex="-1" href="#" style="color: black">
                                     Создать заявку</a></li>
                             <li class="dropdown-item menu-item">
                                 <a tabindex="-1" href="#" style="color: black">Архив</a></li>
                         </ul>
                     </li>
-                    <a href="classes_schedule.html">
-                        <a class="dropdown-item menu-item" href="#" style="background-color: rgb(219,254,211)">
+                    <a href="#">
+                        <a class="dropdown-item menu-item" href="#">
                             Расписание</a>
                     </a>
-                    <a href="notifications.html">
-                        <a class="dropdown-item menu-item" href="notifications.html">Уведомления</a>
+                    <a href="#">
+                        <a class="dropdown-item menu-item" href="#" style="background-color: rgb(219,254,211)">
+                            Уведомления</a>
                     </a>
                     <li class="dropdown-submenu">
                         <a class="dropdown-item menu-item"  tabindex="-2" href="#">Помощь</a>
@@ -145,154 +138,114 @@
             </div>
         </div>
 
-        <!-- start: page function info -->
+        <!-- start: page function info-->
         <div class="section-name">
-            Расписание занятий в группе
+            Уведомления
         </div>
     </div>
 </div>
 
-<!-- start : active submission section (left-side) -->
-<div id="schedule-stuff">
-    <div class="row row-schedule">
-        <div id="submit-col">
-             <div id="submit-info">
-                <table width="100%">
-                    <tbody>
-                    <tr id="submit-table-upper">
-                        <td colspan="3" style="padding-left: 0.7rem">
-                            Действующая заявка
-                        </td>
-                        <td width="20px">
-                           <a href="" style="color: black"
-                              onclick="viewSubmit()">
-                           <i class="fa fa-eye" style="font-size: 28px; border-right: 1px solid rgb(4, 206, 162);
-                                padding-right: 0.7rem">
-                           </i>
-                           </a>
-                        </td>
-                        <td width="20px">
-                            <a href="" style="color: black" onclick="printIt()">
-                            <i class="fa fa-print" style="font-size: 28px; padding: 0 0.7rem 0 0.7rem">
-                            </i>
-                        </a>
-                        </td>
-                    </tr>
-                    <tr class="submit-row">
-                        <td class="submit-param">ID
-                        </td>
-                        <td colspan="4" class="submit-val">0001524
-                        </td>
-                    </tr>
-                    <tr class="submit-row">
-                        <td class="submit-param">Подтверждена
-                        </td>
-                        <td colspan="4" class="submit-val">12.10.2019 14:45:17
-                        </td>
-                    </tr>
-                    <tr class="submit-row">
-                        <td class="submit-param">Специализация
-                        </td>
-                        <td colspan="4" class="submit-val">Борьба
-                        </td>
-                    </tr>
-                    <tr class="submit-row">
-                        <td class="submit-param">№ группы
-                        </td>
-                        <td colspan="4" class="submit-val">4
-                        </td>
-                    </tr>
-                    <tr class="submit-row" style="border-bottom: none">
-                        <td class="submit-param">ФИО тренера
-                        </td>
-                        <td colspan="4" class="submit-val">
-                            Тракторенко Пётр Алексеевич<br/>
-                            Фомин Григорий Александрович
-                        </td>
-                    </tr>
-                    <tr>
-                        <td width="110">
-                        </td>
-                        <td width="90">
-                        </td>
-                        <td width="150">
-                        </td>
-                        <td width="20px">
-                        </td>
-                        <td width="20px">
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+<!-- start : notification list and search area -->
+<div class="row">
+    <div id="directives">
+        <div id="directive-highlight">
+            <p style="padding: 0.2rem 0 0 0; font-weight: bolder; font-size: 18px; text-align: center; background-color: rgb(142, 243, 174)">
+               Учебные планы и нормативы<br/> (2-ой семестр 2019 / 2020 уч. г.)
+            </p>
+            <p class="directive-items">
+                <a style="color: black" href=""><i class="fa fa-file-pdf-o" aria-hidden="true" style="font-size: 20px; color: red"></i>
+                    <span style="text-decoration: underline">
+                    Организация учебной нагрузки
+                </span>
+                </a>
+            </p>
+            <p class="directive-items">
+                <a style="color: black" href="">
+                    <i class="fa fa-file-pdf-o" aria-hidden="true" style="font-size: 20px; color: red"></i>
+                    <span style="text-decoration: underline">
+                    Контрольные нормативы <br/> (общий курс ФКиС)
+                    </span>
+                </a>
+            </p>
+            <p class="directive-items">
+                <a style="color: black" href="">
+                    <i class="fa fa-file-pdf-o" aria-hidden="true" style="font-size: 20px; color: red"></i>
+                    <span style="text-decoration: underline">
+                    Расписание и порядок сдачи <br/>норм ГТО
+                    </span>
+                </a>
+            </p>
+        </div>
+    </div>
+            <div id="notify-core-area">
+                <div id="entries">
+                    <div id="notify-filter">
+                        <p style="font-size: 18px; font-weight: bolder">Сообщения за период</p>
 
+                        <input id="date-pick" type="text" name="datetimes" placeholder="Выберите период" />
+                        <script>
+                            $(function() {
+                                $('input[name="datetimes"]').daterangepicker({
+                                    timePicker: true,
+                                    startDate: moment().startOf('hour'),
+                                    endDate: moment().startOf('hour').add(32, 'hour'),
+                                    locale: {
+                                        format: 'DD/M hh:mm A'
+                                    }
+                                });
+                            });
+                        </script>
+                        <button type="button" class="btn btn-primary" style="height: 40px">Применить</button>
+                    </div>
+                    <div id="notify-units">
+                        <a href="#show-modal" id="show-modal" data-toggle="modal" data-target="#show-modal-1"
+                           style="color: black"><p> > <span style="color: #002752 ">
+                            25.10.2018 11:16:22&nbsp;</span>
+                            <span id="unit-sample" style="font-weight: bolder; text-decoration: underline; color: rgb(5, 60, 70)">
+                                Краткосрочные изменения в расписании занятий по плаванию</span>
+                        </p></a>
+                        <a href="" style="color: black"><p> > <span style="color: #002752 ">25.10.2018 09:51:44&nbsp;</span>
+                            <span style="font-weight: bolder; text-decoration: underline; color: rgb(5, 60, 70)">
+                                Завершение приёма заявок на секции "Единоборства". . .</span>
+                        </p></a>
+                        <a href="" style="color: black"><p> > <span style="color: #002752 ">24.10.2018 17:31:18&nbsp;</span>
+                            <span style="font-weight: bolder; text-decoration: underline; color: rgb(5, 60, 70)">
+                                Открыта регистрация команд на университетский турнир по волейболу. . .</span>
+                        </p></a>
+                        <a href="" style="color: black"><p> > <span style="color: #002752 ">24.10.2018 15:59:21&nbsp;</span>
+                            <span style="font-weight: bolder; text-decoration: underline; color: rgb(5, 60, 70)">
+                                Перенос занятий группы <№ группы> (ОФП) с 28.10. . .</span>
+                        </p></a>
+                        <a href="" style="color: black"><p> > <span style="color: #002752 ">24.10.2018 11:46:08&nbsp;</span>
+                            <span style="font-weight: bolder; text-decoration: underline; color: rgb(5, 60, 70)">
+                                Дополнительный приём на секции спортивных игр. . .</span>
+                        </p></a>
+                    </div>
+                </div>
             </div>
-
+            <div class="modal fade" id="show-modal-1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body extra-style-1">
+                            <p style="color: #002752; font-size: 16px; text-decoration: underline">25.10.2018 11:16:22</p>
+                            <p>
+                                        <span style="font-family: 'Roboto', sans-serif; color: black; font-size: 16px;
+                                        color: rgb(5, 60, 70)">В связи с ремонтными работами на территории бассейна СК "Политехник"
+                                занятия группы №7, указанные в расписании на 1-ой неделе, четверг с 16 ч временно переносятся на
+                                среду 12 ч (той же недели)</span>
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <!-- start : group schedule section (right-side) -->
-        <div id="schedule-col">
-            <table class="schedule-table" style="float: left">
-                <tbody>
-                   <tr style="border: 1px solid #9fcdff; font-size: 20px; font-weight: bolder">
-                       <td height="70px" colspan="3" style="text-align: center;  background-color: rgb(222, 249, 253)">
-                           Неч
-                       </td>
-                   </tr>
-                   <tr style="font-size: 17px; border-bottom: 1px solid #7abaff;">
-                       <td class="schedule-tab-td-left" width="10px">вт
-                       </td>
-                       <td class="schedule-tab-td-left" width="60px">10.00 - 11.40
-                       </td>
-                       <td class="schedule-tab-td-left" width="120px">Политехническая ул., 27
-                           <i class="fa fa-info-circle" style="font-size: 19px; color: forestgreen;"
-                              data-toggle="tooltip" data-placement="top" title="30-40 мин - изучение базовых приёмов&#010;далее - сдача нормативов"></i>
-                       </td>
-                       <tr>
-                           <td class="schedule-tab-td-left">пт
-                           </td>
-                           <td class="schedule-tab-td-left">12.00 - 13.40
-                           </td>
-                           <td class="schedule-tab-td-left">Энгельса пр-т, 23
-                       </tr>
-                </tbody>
-            </table>
-            <table class="schedule-table">
-                 <tbody>
-                    <tr style="font-size: 20px; font-weight: bolder">
-                        <td colspan="3" style="height: 70px; text-align: center; background-color: rgb(217, 253, 232);
-                        border: 1px solid rgb(140, 252, 203); border-left: none">
-                            Чёт
-                        </td>
-                    </tr>
-                   <tr style="height: 100px; font-size: 17px; border-bottom: 1px solid #7abaff;">
-                       </td>
-                       <td class="schedule-tab-td-right" width="10px">пн
-                       </td>
-                       <td class="schedule-tab-td-right" width="70px">14.00 - 15.40
-                       </td>
-                       <td class="schedule-tab-td-right" width="120px" style="font-size: 17px">Полюстровский пр-т, 16
-                       </td>
-                   </tr>
-                    <tr>
-                       </td>
-                       <td class="schedule-tab-td-right">чт
-                       </td>
-                       <td class="schedule-tab-td-right">16.00 - 17.40
-                       </td>
-                       <td class="schedule-tab-td-right" style="font-size: 17px">Политехническая ул., 27
-                           <i class="fa fa-info-circle" style="font-size: 19px; color: forestgreen;"></i>
-                       </td>
-                   </tr>
-
-                </tbody>
-
-            </table>
-
-        </div>
-    </div>
+</body>
 
 
-</div>
+
 
 <!-- start: footer area -->
 
@@ -353,5 +306,7 @@
         </div>
     </div>
 </footer>
+
+
 </body>
 </html>
